--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
 config.env
-*auth_token.txt
 *.pyc
+downloads/*
+download/*
 data*
 .vscode
 .idea
 *.json
-*.pickle
-.netrc
 log.txt
-authorized_chats.txt
-sudo_users.txt
 accounts/*
-Thumbnails/*
-drive_folder
-cookies.txt
+drive_list
+/temp.py
